@@ -28,23 +28,27 @@ CRMetaDataWriterAlg = CRMetaDataBuilder.getMetaDataWriterHandle()
 if (rec.doESD() or rec.doAOD()) and CaloRingerFlags.buildCaloRingsOn() \
     and CRAlgBuilder.usable():
   try:
+    # FIXME: It seems that the python implementation takes a lot of memory 
+    # (https://its.cern.ch/jira/browse/ATLASRECTS-2769?filter=-1),
+    # replace it as egamma is doing to use a C++ implementation
+    pass
     # Make sure we add it before streams:
-    for pos, alg in enumerate(topSequence):
-      if LastCRWriter.getName() == alg.getName():
-        from CaloRingerAlgs.CaloRingerLocker import CaloRingerLocker
-        CRLocker = CaloRingerLocker(name = "CaloRingerLocker", \
-                doElectron = CaloRingerFlags.buildElectronCaloRings(), \
-                doPhoton = CaloRingerFlags.buildPhotonCaloRings(), \
-                EvtStoreName = CRMainAlg.EvtStore.getName(), \
-                MetaDataStoreName = CRMetaDataWriterAlg.MetaDataStore.getName(), \
-                CaloRingerDict = CRAlgBuilder.eventOutputs(), \
-                CaloRingerMetaDict = CRMetaDataBuilder.metaDataOutputs() \
-                )
-        topSequence.insert(pos + 1, CRLocker)
-        mlog.verbose("Successfully added CaloRingerLocker to TopSequence.")
-        break
-    else:
-      treatException("Could not find CaloRingerDecorator algorithm.")
+    #for pos, alg in enumerate(topSequence):
+    #  if LastCRWriter.getName() == alg.getName():
+    #    from CaloRingerAlgs.CaloRingerLocker import CaloRingerLocker
+    #    CRLocker = CaloRingerLocker(name = "CaloRingerLocker", \
+    #            doElectron = CaloRingerFlags.buildElectronCaloRings(), \
+    #            doPhoton = CaloRingerFlags.buildPhotonCaloRings(), \
+    #            EvtStoreName = CRMainAlg.EvtStore.getName(), \
+    #            MetaDataStoreName = CRMetaDataWriterAlg.MetaDataStore.getName(), \
+    #            CaloRingerDict = CRAlgBuilder.eventOutputs(), \
+    #            CaloRingerMetaDict = CRMetaDataBuilder.metaDataOutputs() \
+    #            )
+    #    topSequence.insert(pos + 1, CRLocker)
+    #    mlog.verbose("Successfully added CaloRingerLocker to TopSequence.")
+    #    break
+    #else:
+    #  treatException("Could not find CaloRingerDecorator algorithm.")
   except Exception,e:
     treatException("Could not set up CaloRingerLocker. Switched off ! Reason:\n %s" % traceback.format_exc())
 
